<resources>
    <!-- global strings -->
    <string name="app_name">AMaze</string>
    <string name="logoDesc">logo</string>
    <string name="title_activity_guide">guideActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- Utilities strings -->
    <string name="utils_username">username</string>
    <string name="utils_password">password</string>
    <string name="utils_userImage">userImage</string>

    <!-- splash screen strings -->
    <string name="splash_app_name">MM</string>
    <string name="splash_message_1">Loading</string>
    <string name="splash_message_2">Connecting to server</string>
    <string name="splash_message_3">Feeding the monkeys</string>
    <string name="splash_message_4">Testing your patience</string>

    <!-- Tutorial strings -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="guide_1">Welcome to the MM chat application.\n
                            This is a quick tutorial to get you started :)</string>
    <string name="guide_2">To logout from your current user and switch to another,\n
                            press the shown button in the chat screen.</string>
    <string name="guide_3">enter the text of your message in this text box.</string>
    <string name="guide_4">press the shown button to send your message.</string>
    <string name="guide_5">shake the device to update the messages in the chat screen.</string>

    <!-- login strings -->
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_button_text">Login</string>
    <string name="register_button_text">Register</string>

    <!-- registration strings -->
    <string name="r_email">Email</string>
    <string name="r_name">Name</string>
    <string name="rl_password">Password</string>
    <string name="rl_username">Username</string>
    <string name="r_icon">Icon</string>
    <string name="register_btn">Register</string>
    <string name="clear_btn">Clear</string>
    <string name="register_err">Fill in all fields before submitting</string>

    <!-- Messaging strings-->
    <string name="current_user_name">You</string>
    <string name="login_err">Bad username or password</string>
    <string name="register_err_2">Username is already taken</string>
    <string name="title_activity_login_activity_new">AMaze</string>
    <string name="shake_update_message">Loading new messages</string>
    <string name="notification_content_title">New messages</string>
    <string name="notification_content_text">Tap to view.</string>
    <string name="update_alarm_intent">BG_MESSAGE_UPDATE</string>

    <string name="json_all_messages_wrapper">messages</string>
    <string name="json_num_of_messages">numTotalMessages</string>
    <string name="json_message_wrapper">msg</string>
    <string name="json_message_content">message</string>
    <string name="json_message_time">time</string>
    <string name="json_message_username">username</string>
    <string name="json_message_name">name</string>
    <string name="json_message_icon">icon</string>
    <string name="json_exception">Json Exception occurred</string>
</resources>
