<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.amaze_ing.mm.amazeandroid.RegisterActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:id="@+id/relativeLayout">

        <TextView
            style="@style/text_view_style"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/rl_username"
            android:id="@+id/r_username_txt"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true" />

        <TextView
            style="@style/text_view_style"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/rl_password"
            android:id="@+id/r_password_txt"
            android:layout_below="@+id/r_username_txt" />

        <TextView
            style="@style/text_view_style"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/r_name"
            android:id="@+id/r_name_txt"
            android:layout_below="@+id/r_password_txt" />

        <TextView
            style="@style/text_view_style"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/r_email"
            android:id="@+id/r_email_txt"
            android:layout_below="@+id/r_name_txt" />

        <TextView
            style="@style/text_view_style"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/r_icon"
            android:id="@+id/r_icon_txt"
            android:layout_below="@+id/r_email_txt" />

        <EditText
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:id="@+id/r_username_txtfield"
            android:layout_alignTop="@id/r_username_txt"
            android:layout_toRightOf="@id/r_username_txt"
            android:layout_marginLeft="20dp"
            android:inputType="text" />

        <EditText
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/r_password_txtfield"
            android:layout_below="@id/r_username_txtfield"
            android:layout_alignRight="@id/r_username_txtfield"
            android:layout_marginLeft="20dp"/>

        <EditText
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:id="@+id/r_name_txtfield"
            android:layout_below="@id/r_password_txtfield"
            android:layout_alignRight="@id/r_password_txtfield"
            android:layout_marginLeft="20dp"
            android:inputType="textPersonName" />

        <EditText
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:id="@+id/r_email_txtfield"
            android:layout_below="@id/r_name_txtfield"
            android:layout_alignRight="@id/r_name_txtfield"
            android:layout_marginLeft="20dp"
            android:inputType="textEmailAddress" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/r_email_txtfield"
            android:layout_alignLeft="@id/r_email_txtfield"
            android:id="@+id/radio_buttons">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New RadioButton"
                android:id="@+id/radioButton" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New RadioButton"
                android:id="@+id/radioButton4" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New RadioButton"
                android:id="@+id/radioButton2" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New RadioButton"
                android:id="@+id/radioButton3" />
        </RadioGroup>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_btn"
            android:id="@+id/register_btn"
            android:background="@color/colorPrimary"
            android:layout_below="@id/radio_buttons"
            android:layout_alignRight="@id/r_email_txtfield"
            android:layout_alignEnd="@id/r_email_txtfield"
            android:layout_marginTop="8dp"
            android:onClick="register"/>

    </RelativeLayout>
</RelativeLayout>
